fixed invisible menu

--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ hr {
 	transform: scaleX(1);
 }
 
-.burger {
-	display: none;
+#burger {
+	/* display: none; */
 }
 
 #menu {
@@ -162,24 +162,25 @@ hr {
 		display: none;
 	}
 
-	.burger {
+	#burger {
 		margin-left: 30px;
 		margin-top: 30px;
+		display: block;
 		position: fixed;
 		z-index: 1;
 	}
 
-	.burger:hover {
+	#burger:hover {
 		cursor: pointer;
 	}
 
-	.burger>div {
+	#burger>div {
 		width: 40px;
 		height: 3px;
 		background-color: #fff;
 	}
 
-	.burger>div:nth-child(2) {
+	#burger>div:nth-child(2) {
 		margin: 12px 0px;
 	}
 
